--- a/package.json
+++ b/package.json
@@ -23,22 +23,16 @@
   "engines": {
     "node": ">= 0.12.0"
   },
-  "scripts": {
-    "test": "grunt test"
-  },
   "dependencies": {
     "lodash": "~2.4.1"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-nodeunit": "^0.3.3",
     "grunt": "~0.4.5"
   },
   "peerDependencies": {
     "grunt": "~0.4.5"
   },
   "keywords": [
-    "gruntplugin"
+    "gruntplugin", "json", "templating", "array"
   ]
 }
